@@ -1,6 +1,8 @@
 2.4.3 Released ??? 2018
 
+* Improve FlowP()
 * Add styles '^' and '_' for 'smooth' to find upper/lower bound of the data.
+* Add flag in CMake to manually disable C99 complex numbers
 
 2.4.2.1 Released 31 March 2018
 
